--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS=-O2 -g -Wall -fmessage-length=0 -std=c++14
 
-OBJS=cmtool.o interpreter.o memory.o
+OBJS=cmtool.o interpreter.o memory.o printer.o
 
 LIBS=
 
