some generator stuff

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS=-O2 -g -Wall -fmessage-length=0 -std=c++14
 
-OBJS=distribution.o evaluator.o generator.o loda.o interpreter.o machine.o parser.o printer.o sequence.o test.o
+OBJS=evaluator.o loda.o interpreter.o machine.o parser.o printer.o sequence.o test.o
 
 LIBS=
 
@@ -13,6 +13,3 @@ all: $(TARGET)
 
 clean:
 	rm -f $(OBJS) $(TARGET)
-
-test: $(TARGET)
-	cd .. && ./loda
