first half of program iterator

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,6 @@
 CXXFLAGS=-O2 -g -Wall -fmessage-length=0 -std=c++14
 
-#iterator.o
-OBJS=evaluator.o finder.o generator.o loda.o interpreter.o optimizer.o parser.o printer.o scorer.o sequence.o test.o
+OBJS=evaluator.o finder.o generator.o iterator.o loda.o interpreter.o optimizer.o parser.o printer.o scorer.o sequence.o test.o
 
 LIBS=
 
