refactoring: extract common

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS=-O2 -g -Wall -fmessage-length=0 -std=c++14
 
-OBJS=finder.o generator.o iterator.o loda.o interpreter.o optimizer.o parser.o printer.o scorer.o serializer.o sequence.o test.o
+OBJS=common.o finder.o generator.o iterator.o loda.o interpreter.o optimizer.o parser.o printer.o scorer.o serializer.o test.o
 
 LIBS=
 
