--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS=-O2 -g -Wall -fmessage-length=0 -std=c++11
 
-OBJS=database.o distribution.o generator.o iterator.o finder.o loda.o interpreter.o miner.o number.o oeis.o optimizer.o parser.o printer.o serializer.o test.o util.o
+OBJS=distribution.o generator.o iterator.o loda.o interpreter.o miner.o number.o oeis.o optimizer.o parser.o printer.o test.o util.o
 
 LIBS=
 
