--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS=-O2 -g -Wall -fmessage-length=0 -std=c++11
 
-OBJS=distribution.o generator.o iterator.o main.o interpreter.o miner.o number.o oeis.o optimizer.o parser.o printer.o program.o test.o util.o
+OBJS=generator.o iterator.o main.o interpreter.o miner.o number.o oeis.o optimizer.o parser.o printer.o program.o test.o util.o
 
 LIBS=
 
