refactoring: extract reducer

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS=-O2 -g -Wall -fmessage-length=0 -std=c++11
 
-OBJS=generator.o interpreter.o main.o matcher.o miner.o number.o oeis.o optimizer.o parser.o program.o program_util.o semantics.o synthesizer.o test.o util.o
+OBJS=generator.o interpreter.o main.o matcher.o miner.o number.o oeis.o optimizer.o parser.o program.o program_util.o reducer.o semantics.o synthesizer.o test.o util.o
 
 LIBS=
 
