refactoring: extract finder

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS=-O2 -g -Wall -fmessage-length=0 -std=c++11 -g -rdynamic
 
-OBJS=extender.o generator.o interpreter.o main.o matcher.o memory.o miner.o minimizer.o number.o oeis.o optimizer.o parser.o program.o program_util.o reducer.o semantics.o synthesizer.o test.o util.o
+OBJS=extender.o finder.o generator.o interpreter.o main.o matcher.o memory.o miner.o minimizer.o number.o oeis.o optimizer.o parser.o program.o program_util.o reducer.o semantics.o synthesizer.o test.o util.o
 
 LIBS=
 
