--- a/src/Makefile
+++ b/src/Makefile
@@ -12,11 +12,12 @@ $(TARGET): init $(OBJS)
 all: $(TARGET)
 
 init:
+	mkdir -p external
 	[ -f external/jute.h ] || curl -sS -o external/jute.h https://raw.githubusercontent.com/amir-s/jute/master/jute.h
 	[ -f external/jute.cpp ] || curl -sS -o external/jute.cpp https://raw.githubusercontent.com/amir-s/jute/master/jute.cpp
 
 clean:
-	rm -f $(OBJS) $(TARGET) external/*
+	rm -R -f $(OBJS) $(TARGET) external
 
 test: $(TARGET)
 	cd .. && ./loda test && cd src
