--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CXXFLAGS=-Iinclude -Iexternal -O2 -g -Wall -fmessage-length=0 -std=c++11
 
 SRC_DIR=$(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
-OBJS=big_number.o blocks.o config.o evaluator.o extender.o external/jute.o finder.o generator.o generator_v1.o generator_v2.o generator_v3.o generator_v4.o generator_v5.o interpreter.o iterator.o main.o matcher.o memory.o miner.o minimizer.o mutator.o number.o oeis_manager.o oeis_maintenance.o oeis_sequence.o optimizer.o parser.o program.o program_util.o reducer.o semantics.o sequence.o stats.o test.o util.o
+OBJS=big_number.o blocks.o config.o evaluator.o extender.o external/jute.o finder.o generator.o generator_v1.o generator_v2.o generator_v3.o generator_v4.o generator_v5.o interpreter.o iterator.o main.o matcher.o memory.o miner.o minimizer.o mutator.o number.o oeis_list.o oeis_manager.o oeis_maintenance.o oeis_sequence.o optimizer.o parser.o program.o program_util.o reducer.o semantics.o sequence.o stats.o test.o util.o
 LIBS=
 
 loda: external/jute.h external/jute.cpp $(OBJS)
