--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make && cd ..
+        run: cd src && make info && make && cd ..
       - name: Test
         run: ./loda test
   build-macos:
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make && cd ..
+        run: cd src && make info && make && cd ..
       - name: Test
         run: ./loda test
   build-windows:
@@ -29,6 +29,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make && cd ..
+        run: cd src && make info && make && cd ..
       - name: Test
         run: ./loda test
