--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make && cd ..
+        run: cd src && make
       - name: Test
         run: ./loda test
   build-macos:
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make && cd ..
+        run: cd src && make
       - name: Test
         run: ./loda test
   build-windows:
@@ -30,6 +30,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
       - name: Build
-        run: cd src && nmake.exe /F Makefile.windows && cd ..
+        run: cd src && nmake.exe /F Makefile.windows
+      - name: Check
+        run: dir
       - name: Test
         run: loda.exe test
