--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make && cd ..
+        run: cd src && make
       - name: Test
         run: ./loda test
   build-macos:
@@ -21,6 +21,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make && cd ..
+        run: cd src && make
       - name: Test
         run: ./loda test
+  build-windows:
+    runs-on: windows-2019
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ilammy/msvc-dev-cmd@v1
+      - name: Build
+        run: cd src && nmake.exe /F Makefile.windows
+      - name: Test
+        run: .\loda.exe test
