--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,13 +4,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  create-release:
+  release:
     runs-on: ubuntu-20.04
     steps:
-      - name: version
-        run: echo "::set-output name=version::$(date +"%-y.%-m.%-d")"
+      - name: Generate Version
+        run: echo "::set-output name=version::$(date +"%-Y.%-m.%-d")"
         id: version
-      - name: release
+      - name: Create Release
         uses: actions/create-release@v1
         id: create-release
         with:
@@ -21,12 +21,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
   build-linux:
-    needs: create-release
+    needs: release
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: check
-        run: echo ${{ needs.create-release.outputs.version }}
+      - name: CheckVersion
+        run: echo ${{ needs.release.outputs.version }}
       - name: Build
         run: cd src && make
       - name: Archive
@@ -35,15 +35,12 @@ jobs:
           name: loda-linux
           path: loda
   build-macos:
-    needs: create-release
+    needs: release
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v2
-      - name: version
-        run: echo "::set-output name=version::$(date +"%-y.%-m.%-d")"
-        id: version
-      - name: test
-        run: echo ${{ steps.version.outputs.version }}
+      - name: CheckVersion
+        run: echo ${{ needs.release.outputs.version }}
       - name: Build
         run: cd src && make
       - name: Archive
@@ -52,15 +49,12 @@ jobs:
           name: loda-macos
           path: loda
   build-windows:
-    needs: create-release
+    needs: release
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
-      - name: version
-        run: echo "::set-output name=version::$(date +"%-y.%-m.%-d")"
-        id: version
-      - name: test
-        run: echo "${{ steps.version.outputs.version }}"
+      - name: CheckVersion
+        run: echo ${{ needs.release.outputs.version }}
       - uses: ilammy/msvc-dev-cmd@v1
       - name: Build
         run: cd src && nmake.exe /F Makefile.windows
