--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,29 +4,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  release:
+  create-release:
     runs-on: ubuntu-20.04
     steps:
       - name: Generate Version
+        id: generate-version
         run: echo "::set-output name=version::$(date +"%-Y.%-m.%-d")"
-        id: version
       - name: Create Release
         uses: actions/create-release@v1
         id: create-release
         with:
           draft: false
           prerelease: false
-          release_name: v${{ steps.version.outputs.version }}
-          tag_name: v${{ steps.version.outputs.version }}
+          release_name: v${{ steps.generate-version.outputs.version }}
+          tag_name: v${{ steps.generate-version.outputs.version }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
+    outputs:
+      version: ${{ steps.generate-version.outputs.version }}
   build-linux:
-    needs: release
+    needs: create-release
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - name: CheckVersion
-        run: echo ${{ needs.release.outputs.version }}
+        run: echo ${{ needs.create-release.outputs.version }}
       - name: Build
         run: cd src && make
       - name: Archive
@@ -35,12 +37,12 @@ jobs:
           name: loda-linux
           path: loda
   build-macos:
-    needs: release
+    needs: create-release
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v2
       - name: CheckVersion
-        run: echo ${{ needs.release.outputs.version }}
+        run: echo ${{ needs.create-release.outputs.version }}
       - name: Build
         run: cd src && make
       - name: Archive
@@ -49,12 +51,12 @@ jobs:
           name: loda-macos
           path: loda
   build-windows:
-    needs: release
+    needs: create-release
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
       - name: CheckVersion
-        run: echo ${{ needs.release.outputs.version }}
+        run: echo ${{ needs.create-release.outputs.version }}
       - uses: ilammy/msvc-dev-cmd@v1
       - name: Build
         run: cd src && nmake.exe /F Makefile.windows
