--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make loda LODA_VERSION={{ needs.create-release.outputs.version }}
+        run: cd src && make loda LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Archive
         uses: actions/upload-artifact@v2
         with:
@@ -40,7 +40,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make loda LODA_VERSION={{ needs.create-release.outputs.version }}
+        run: cd src && make loda LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Archive
         uses: actions/upload-artifact@v2
         with:
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
       - name: Build
-        run: cd src && nmake.exe /F Makefile.windows loda LODA_VERSION={{ needs.create-release.outputs.version }}
+        run: cd src && nmake.exe /F Makefile.windows loda LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Archive
         uses: actions/upload-artifact@v2
         with:
