--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,23 @@ jobs:
     outputs:
       version: ${{ steps.generate-version.outputs.version }}
       upload_url: ${{ steps.create-release.outputs.upload_url }}
-  build-linux:
+  build-ubuntu-18:
+    needs: create-release
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build
+        run: cd src && make loda LODA_VERSION=${{ needs.create-release.outputs.version }}
+      - name: Upload
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: ./loda
+          asset_name: loda-ubuntu-18
+          asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+  build-ubuntu-20:
     needs: create-release
     runs-on: ubuntu-20.04
     steps:
@@ -35,11 +51,11 @@ jobs:
         with:
           upload_url: ${{ needs.create-release.outputs.upload_url }}
           asset_path: ./loda
-          asset_name: loda-linux
+          asset_name: loda-ubuntu-20
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ github.token }}
-  build-macos:
+  build-macos-11:
     needs: create-release
     runs-on: macos-11
     steps:
@@ -51,7 +67,7 @@ jobs:
         with:
           upload_url: ${{ needs.create-release.outputs.upload_url }}
           asset_path: ./loda
-          asset_name: loda-macos
+          asset_name: loda-macos-11
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ github.token }}
@@ -68,7 +84,7 @@ jobs:
         with:
           upload_url: ${{ needs.create-release.outputs.upload_url }}
           asset_path: ./loda.exe
-          asset_name: loda-windows.exe
+          asset_name: loda-windows-2019.exe
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ github.token }}
