--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,5 @@
     "C_Cpp.clang_format_style": "Google",
     "editor.formatOnSave": true,
     "makefile.makeDirectory": "${workspaceFolder}/src",
-    "makefile.makefilePath": "${workspaceFolder}/src/Makefile",
-    "makefile.configureAfterCommand": false,
-    "makefile.configureOnEdit": false,
-    "makefile.configureOnOpen": false
+    "makefile.makefilePath": "${workspaceFolder}/src/Makefile"
 }
