setup checks for updates

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make loda LODA_VERSION=${{ needs.create-release.outputs.version }}
+        run: cd src && make loda LODA_PLATFORM=ubuntu-18 LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Upload
         uses: actions/upload-release-asset@v1
         with:
@@ -45,7 +45,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make loda LODA_VERSION=${{ needs.create-release.outputs.version }}
+        run: cd src && make loda LODA_PLATFORM=ubuntu-20 LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Upload
         uses: actions/upload-release-asset@v1
         with:
@@ -61,7 +61,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make loda LODA_VERSION=${{ needs.create-release.outputs.version }}
+        run: cd src && make loda LODA_PLATFORM=macos-11 LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Upload
         uses: actions/upload-release-asset@v1
         with:
@@ -78,7 +78,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
       - name: Build
-        run: cd src && nmake.exe /F Makefile.windows loda LODA_VERSION=${{ needs.create-release.outputs.version }}
+        run: cd src && nmake.exe /F Makefile.windows loda LODA_PLATFORM=windows-19 LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Upload
         uses: actions/upload-release-asset@v1
         with:
